--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,9 +18,9 @@ spring:
   # todo 需替换配置
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/my_db
+    url: jdbc:mysql://1.12.246.5:3306/my_db
     username: root
-    password: 123456
+    password: a5611001
   # Redis 配置
   # todo 需替换配置，然后取消注释
 #  redis:
@@ -31,10 +31,10 @@ spring:
 #    password: 123456
   # Elasticsearch 配置
   # todo 需替换配置，然后取消注释
-#  elasticsearch:
-#    uris: http://localhost:9200
-#    username: root
-#    password: 123456
+  elasticsearch:
+    uris: http://localhost:9200
+    username: elastic
+    password: a5611001
   # 文件上传
   servlet:
     multipart:
