--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,8 +33,8 @@ spring:
   # todo 需替换配置，然后取消注释
   elasticsearch:
     uris: http://localhost:9200
-    username: elastic
-    password: a5611001
+#    username: elastic
+#    password: a5611001
   # 文件上传
   servlet:
     multipart:
