--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: springboot-init
+    name: iceso
   # 默认 dev 环境
   profiles:
     active: dev
@@ -18,7 +18,7 @@ spring:
   # todo 需替换配置
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://1.12.246.5:3306/my_db
+    url: jdbc:mysql://localhost:3306/my_db
     username: root
     password: a5611001
   # Redis 配置
